# Snake_Effect_using_CMake

./: CMakeLists.txt  avr.txt
inc/: LBit_Math.h  LSTD_Types.h
lib/: MDIO_Config.h  MDIO_Interface.h  MDIO_Private.h  MDIO_Program.c
src/: main.c
